--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: bmhsign
+application: you_app_name
 version: 1
 runtime: python27
 api_version: 1
@@ -11,3 +11,5 @@ handlers:
   script: auth.app
 - url: /auth
   script: auth.app
+- url: /do/.*
+  script: do.app
